--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Hello World</h1>
     <p>
-    &#127760 - Hello Sanele!
+    &#127760 - Hello Sanele Ndlovu!
     </p>
     <p><a href="author.html">Authors</a></p>
 </body>
