--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <p>
     &#127760 - Hello Sanele Ndlovu!
     </p>
+	<p>
+	This will cause a merge conflict
+	</p>
     <p><a href="author.html">Authors</a></p>
 </body>
 </html>
